# methphaser

./: README.md  methphaser  pyproject.toml
docs/: ARCHITECTURE.md
src/methphaser/: __init__.py  cli.py  discovery.py  imprinting.py  pipeline.py  step1_core.py  step1_parallel.py  step1_regions.py  step2_postprocess.py
src/methphaser/data/: imprinting_regions.hg38.SOURCES.md  imprinting_regions.hg38.bed
tests/: test_discovery.py  test_imprinting.py  test_integration_smoke.py  test_step1_parallel_helpers.py  test_step1_regions.py
tests/data/: HG002_2025q1_PAW70337_30x.chr21_4.9M_6.2M.subset.bam.bai
tests/data/PAW70337_output/: SAMPLE.wf_snp.haploblocks.gtf  SAMPLE.wf_snp.vcf.gz.tbi
tools/: build_imprinting_database.py
